--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 
   <body>
     <div id="root"></div>
-    <script src="build/bundle.js"></script>
+    <script src="build/bundle.js?v=2"></script>
   </body>
 </html>
